try setting autocmmit false